Fix image URL fallback in message wrapper

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     
                 // HTML 구조 만들기
                 wrapper.innerHTML = `
-                    <img src="${data.img_url || '기본이미지주소'}" class="profile-img">
+                    <img src="${data.img_url || 'https://github.com/houmoon/houmoon.github.io/blob/main/blank.png?raw=true'}" class="profile-img">
                     
                     <div class="bubble-container">
                         <span style="font-size:11px; margin-bottom:2px;">${data.name}</span>
