--- a/index.html
+++ b/index.html
@@ -60,16 +60,17 @@
         /* 모바일 반응형 디자인 */
         @media (max-width: 768px) {
             body { font-size: 16px; }
-            #chat-container { max-width: 100%; height: 100vh; margin: 0; border-radius: 0; }
-            #chat-header { height: 40px; padding: 12px 15px; }
+            #chat-container { max-width: 100%; height: 100vh; margin: 0; border-radius: 0; display: flex; flex-direction: column; }
+            #chat-header { height: 40px; padding: 12px 15px; flex-shrink: 0; }
             #header-profile-img { width: 40px; height: 40px; }
             #chat-header-title { font-size: 20px; }
             #profile-dropdown { min-width: 180px; }
-            #chat-box { padding: 15px; }
-            .bubble-container { max-width: 85%; }
-            .bubble { max-width: 100%; font-size: 15px; padding: 12px 16px; }
+            #chat-box { flex: 1; overflow-y: auto; padding: 15px 15px 15px 15px; }
+            #input-area { flex-shrink: 0; display: flex; gap: 10px; padding: 15px; background-color: #fff; border-top: 1px solid #e5e5e5; align-items: flex-end; }
             #msg-input { font-size: 16px; padding: 14px 18px; }
             #send-btn { padding: 14px 28px; font-size: 15px; }
+            .bubble-container { max-width: 85%; }
+            .bubble { max-width: 100%; font-size: 15px; padding: 12px 16px; }
             .profile-img { width: 36px; height: 36px; }
         }
         
