--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>DLK Q&A Page</title>
     <style>
         /* CSS: 디자인 (페이스북 메신저 스타일) */
-        html { height: 100%; margin: 0; padding: 0; }
-        body { font-family: sans-serif; background-color: #f0f2f5; margin: 0; padding: 0; height: 100%; overflow: hidden; }
-        #chat-container { max-width: 500px; margin: 20px auto; background: white; height: 90vh; display: flex; flex-direction: column; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+        html { height: 100%; height: 100dvh; margin: 0; padding: 0; }
+        body { font-family: sans-serif; background-color: #f0f2f5; margin: 0; padding: 0; height: 100%; height: 100dvh; overflow: hidden; }
+        #chat-container { max-width: 500px; margin: 20px auto; background: white; height: calc(100dvh - 40px); display: flex; flex-direction: column; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
         #chat-box { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; }
         
         /* 말풍선 공통 */
